--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1763,12 +1763,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+      "{'Hash': 'QmRGnfs3qpZX7siLr5vgwCp8XCgvQ4Q9mqzoh4mU1RWJvW', 'Name': 'output_1661916959.7345448.gif', 'Size': '10230281'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CV070\n",
+    "url = 'https://100api.orai.dev/cv070'\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV070\n",
-    "url = 'https://100api.orai.dev/cv070'\n",
+    "#CV071\n",
+    "url = 'https://100api.orai.dev/cv071'\n",
     "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
