--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1795,7 +1795,8 @@
    "source": [
     "#CV071\n",
     "url = 'https://100api.orai.dev/cv071'\n",
-    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
+    "        'style_number': 3}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
