--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1841,7 +1841,7 @@
     "#CV072\n",
     "url = 'https://100api.orai.dev/cv072'\n",
     "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
-    "        'input_background_hash': ''}\n",
+    "        'input_background_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
