--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1885,8 +1885,7 @@
    "source": [
     "#CV074\n",
     "url = 'https://100api.orai.dev/cv074'\n",
-    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
-    "        'input_background_hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh'}\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
