--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1879,9 +1879,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+      "{'Hash': 'QmQunvjR8KbqmsvPrNW4tGDuy8Uxgkcm9f7YtcmjhWLXdN', 'Name': 'output_74_1661917396.8526025.gif', 'Size': '2186683'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV074\n",
     "url = 'https://100api.orai.dev/cv074'\n",
@@ -1899,7 +1908,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV075\n",
+    "url = 'https://100api.orai.dev/cv075'\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
