--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1905,9 +1905,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+      "{'Hash': 'QmURswd9pnMsTBUK3eJNse2R85qNXvWPgecbeyf9td7zBt', 'Name': 'cv075_output_1661917500.8061583.gif', 'Size': '926954'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV075\n",
     "url = 'https://100api.orai.dev/cv075'\n",
