--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1931,9 +1931,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+      "{'Hash': 'QmTh8bV1XzT8U6tQo3oKHusJ73bH2CQucamyNW7QAJ4bML', 'Name': '1661917704.gif', 'Size': '16560738'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV076\n",
     "url = 'https://100api.orai.dev/cv076'\n",
@@ -1951,7 +1960,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#CV083\n",
+    "url = 'https://100api.orai.dev/cv083/image_encode'\n",
+    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
