--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1963,7 +1963,7 @@
    "source": [
     "#CV083\n",
     "url = 'https://100api.orai.dev/cv083/image_encode'\n",
-    "data = {'input_source_hash': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
