--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1957,13 +1957,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2', 'text_input': 'gray'}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#CV083\n",
     "url = 'https://100api.orai.dev/cv083/image_encode'\n",
-    "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2'}\n",
+    "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
+    "        'text_input':'gray'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
@@ -1971,6 +1981,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
