--- a/100API.ipynb
+++ b/100API.ipynb
@@ -1970,7 +1970,7 @@
     }
    ],
    "source": [
-    "#CV083\n",
+    "#CV083 only upload file\n",
     "url = 'https://100api.orai.dev/cv083/image_encode'\n",
     "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
     "        'text_input':'gray'}\n",
@@ -1988,7 +1988,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#CV083\n",
+    "#CV083 only upload file\n",
     "url = 'https://100api.orai.dev/cv083/image_decode'\n",
     "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
     "        'text_input':'gray'}\n",
