--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2007,7 +2007,7 @@
    "outputs": [],
    "source": [
     "#FI001\n",
-    "url = 'https://100api.orai.dev/cv083/image_decode'\n",
+    "url = 'https://100api.orai.dev/fi001'\n",
     "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
     "        'text_input':'gray'}\n",
     "headers = {\n",
