--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2008,8 +2008,10 @@
    "source": [
     "#FI001\n",
     "url = 'https://100api.orai.dev/fi001'\n",
-    "data = {'input_source': 'QmPXn1dDTTVTkCtiZFLQ639tYtpWwsNrym4CC8eisexub2',\n",
-    "        'text_input':'gray'}\n",
+    "data = {'pair': '0x0d4a11d5eeaac28ec3f61d100daf4d40471f1852',\n",
+    "        'window_length':5,\n",
+    "        'method':'prophet',\n",
+    "        'predict_days':14}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
