--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2034,7 +2034,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ga001_1\n",
+    "url = 'https://100api.orai.dev/ga001_1'\n",
+    "data = {'pair': '0x0d4a11d5eeaac28ec3f61d100daf4d40471f1852',\n",
+    "        'window_length':5,\n",
+    "        'method':'prophet',\n",
+    "        'predict_days':14}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
