--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2037,10 +2037,7 @@
    "source": [
     "#ga001_1\n",
     "url = 'https://100api.orai.dev/ga001_1'\n",
-    "data = {'pair': '0x0d4a11d5eeaac28ec3f61d100daf4d40471f1852',\n",
-    "        'window_length':5,\n",
-    "        'method':'prophet',\n",
-    "        'predict_days':14}\n",
+    "data = {'input_source':'0 0 0 0 1 7 0 5 0 9 0 3 0 0 5 2 0 7 0 0 0 0 0 0 4 0 0 0 1 6 0 0 4 0 0 2 0 0 0 8 0 1 0 0 0 8 0 0 5 0 0 6 4 0 0 0 9 0 0 0 0 0 0 7 0 2 1 0 0 8 0 9 0 5 0 2 3 0 0 0 0'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
