--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2031,11 +2031,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source': '0 0 0 0 1 7 0 5 0 9 0 3 0 0 5 2 0 7 0 0 0 0 0 0 4 0 0 0 1 6 0 0 4 0 0 2 0 0 0 8 0 1 0 0 0 8 0 0 5 0 0 6 4 0 0 0 9 0 0 0 0 0 0 7 0 2 1 0 0 8 0 9 0 5 0 2 3 0 0 0 0'}\n",
+      "{'data': [[2, 6, 4, 9, 1, 7, 3, 5, 8], [9, 8, 3, 6, 4, 5, 2, 1, 7], [5, 7, 1, 3, 8, 2, 4, 9, 6], [3, 1, 6, 7, 9, 4, 5, 8, 2], [4, 2, 5, 8, 6, 1, 9, 7, 3], [8, 9, 7, 5, 2, 3, 6, 4, 1], [6, 3, 9, 4, 7, 8, 1, 2, 5], [7, 4, 2, 1, 5, 6, 8, 3, 9], [1, 5, 8, 2, 3, 9, 7, 6, 4]], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ga001_1\n",
+    "url = 'https://100api.orai.dev/ga001_1'\n",
+    "data = {'input_source':'0 0 0 0 1 7 0 5 0 9 0 3 0 0 5 2 0 7 0 0 0 0 0 0 4 0 0 0 1 6 0 0 4 0 0 2 0 0 0 8 0 1 0 0 0 8 0 0 5 0 0 6 4 0 0 0 9 0 0 0 0 0 0 7 0 2 1 0 0 8 0 9 0 5 0 2 3 0 0 0 0'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ga001_1\n",
+    "#ga001_2\n",
     "url = 'https://100api.orai.dev/ga001_1'\n",
     "data = {'input_source':'0 0 0 0 1 7 0 5 0 9 0 3 0 0 5 2 0 7 0 0 0 0 0 0 4 0 0 0 1 6 0 0 4 0 0 2 0 0 0 8 0 1 0 0 0 8 0 0 5 0 0 6 4 0 0 0 9 0 0 0 0 0 0 7 0 2 1 0 0 8 0 9 0 5 0 2 3 0 0 0 0'}\n",
     "headers = {\n",
