--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2062,8 +2062,8 @@
    "outputs": [],
    "source": [
     "#ga001_2\n",
-    "url = 'https://100api.orai.dev/ga001_1'\n",
-    "data = {'input_source':'0 0 0 0 1 7 0 5 0 9 0 3 0 0 5 2 0 7 0 0 0 0 0 0 4 0 0 0 1 6 0 0 4 0 0 2 0 0 0 8 0 1 0 0 0 8 0 0 5 0 0 6 4 0 0 0 9 0 0 0 0 0 0 7 0 2 1 0 0 8 0 9 0 5 0 2 3 0 0 0 0'}\n",
+    "url = 'https://100api.orai.dev/ga001_2'\n",
+    "data = {'input_source_hash':''}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
