--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2057,12 +2057,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
+      "{'Hash': 'QmaYkTFEMcCFkrqZXYqwXZYEBhqPb8ewCqm32Uku4dbEr6', 'Name': 'file', 'Size': '210116'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ga001_2\n",
+    "url = 'https://100api.orai.dev/ga001_2'\n",
+    "data = {'input_source_hash':'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ga001_2\n",
-    "url = 'https://100api.orai.dev/ga001_2'\n",
+    "#ga001_3\n",
+    "url = 'https://100api.orai.dev/ga001_3'\n",
     "data = {'input_source_hash':'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
