--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2083,12 +2083,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_source_hash': 'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
+      "{'data': [[5, 3, 2, 6, 7, 8, 9, 4, 1], [6, 7, 4, 1, 9, 5, 3, 2, 8], [1, 9, 8, 3, 4, 2, 5, 6, 7], [8, 2, 9, 7, 6, 1, 4, 5, 3], [4, 1, 6, 8, 5, 3, 7, 9, 2], [7, 5, 3, 9, 2, 4, 8, 1, 6], [9, 6, 1, 5, 3, 7, 2, 8, 4], [2, 8, 7, 4, 1, 9, 6, 3, 5], [3, 4, 5, 2, 8, 6, 1, 7, 9]], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ga001_3\n",
+    "url = 'https://100api.orai.dev/ga001_3'\n",
+    "data = {'input_source_hash':'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ga001_3\n",
-    "url = 'https://100api.orai.dev/ga001_3'\n",
+    "#ga002\n",
+    "url = 'https://100api.orai.dev/ga002'\n",
     "data = {'input_source_hash':'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
