--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2109,13 +2109,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'level': 'Hard'}\n",
+      "{'data': [[0, 3, 0, 2, 0, 0, 0, 0, 0], [6, 0, 0, 5, 7, 0, 0, 0, 0], [0, 0, 4, 0, 1, 0, 0, 5, 0], [0, 0, 0, 8, 0, 4, 9, 1, 0], [1, 2, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 3, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 7, 4], [0, 1, 0, 0, 6, 0, 0, 0, 3], [3, 0, 0, 4, 0, 0, 2, 8, 6]], 'status': 'success'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ga002\n",
+    "url = 'https://100api.orai.dev/ga002'\n",
+    "data = {'level':'Hard'}\n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ga002\n",
-    "url = 'https://100api.orai.dev/ga002'\n",
-    "data = {'input_source_hash':'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX'}\n",
+    "#ga003\n",
+    "url = 'https://100api.orai.dev/ga003'\n",
+    "data = {'level':'Hard'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
