--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2124,7 +2124,7 @@
    "source": [
     "#ga002\n",
     "url = 'https://100api.orai.dev/ga002'\n",
-    "data = {'level':'Hard'}\n",
+    "data = {'body':'Hard'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
