--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2124,7 +2124,12 @@
    "source": [
     "#ga002\n",
     "url = 'https://100api.orai.dev/ga002'\n",
-    "data = {'body':'Hard'}\n",
+    "data = [\n",
+    "    {\n",
+    "      \"key\": \"string\",\n",
+    "      \"answer\": \"string\"\n",
+    "    }\n",
+    "  ]\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
