--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2122,14 +2122,9 @@
     }
    ],
    "source": [
-    "#ga003\n",
-    "url = 'https://100api.orai.dev/ga003'\n",
-    "data = [\n",
-    "    {\n",
-    "      \"key\": \"string\",\n",
-    "      \"answer\": \"string\"\n",
-    "    }\n",
-    "  ]\n",
+    "#ga002\n",
+    "url = 'https://100api.orai.dev/ga002'\n",
+    "data = {'level':'Hard'}\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
