--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2141,7 +2141,12 @@
    "source": [
     "#ga003\n",
     "url = 'https://100api.orai.dev/ga003'\n",
-    "data = {'level':'Hard'}\n",
+    "data = [\n",
+    "    {\n",
+    "      \"key\": \"string\",\n",
+    "      \"answer\": \"string\"\n",
+    "    }\n",
+    "  ]\n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
