--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2135,18 +2135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'key': 'string', 'answer': 'string'}]\n",
+      "{'error': 'Bad Request: JSON is required!!!'}\n"
+     ]
+    }
+   ],
    "source": [
     "#ga003\n",
     "url = 'https://100api.orai.dev/ga003'\n",
-    "data = [\n",
+    "data = {'data':[\n",
     "    {\n",
     "      \"key\": \"string\",\n",
     "      \"answer\": \"string\"\n",
-    "    }\n",
-    "  ]\n",
+    "    }]}\n",
+    "  \n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
@@ -2154,6 +2163,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
