--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2135,14 +2135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'key': 'string', 'answer': 'string'}]\n",
+      "{'data': [{'key': 'string', 'answer': 'string'}]}\n",
       "{'error': 'Bad Request: JSON is required!!!'}\n"
      ]
     }
@@ -2159,7 +2159,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
