--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2172,11 +2172,7 @@
    "source": [
     "#ga003\n",
     "url = 'https://100api.orai.dev/ga003'\n",
-    "data = {'data':[\n",
-    "    {\n",
-    "      \"key\": \"string\",\n",
-    "      \"answer\": \"string\"\n",
-    "    }]}\n",
+    "data = {}\n",
     "  \n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
