--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2166,12 +2166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "{'error': 'Bad Request: JSON is required!!!'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#ga003\n",
-    "url = 'https://100api.orai.dev/ga003'\n",
+    "#mu002\n",
+    "url = 'https://100api.orai.dev/mu002'\n",
     "data = {}\n",
     "  \n",
     "headers = {\n",
@@ -2181,6 +2190,13 @@
     "print(data)\n",
     "print(response.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
