--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2217,12 +2217,16 @@
    "source": [
     "#mu006_1\n",
     "url = 'https://100api.orai.dev/mu006_1'\n",
-    "data = {}\n",
+    "files = {\n",
+    "    'temperature': (None, '1'),\n",
+    "    'length': (None, '200'),\n",
+    "    'mp3_output': (None, 'mp3_output = true'),\n",
+    "}\n",
     "  \n",
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, files=files, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
