--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2244,7 @@
    "source": [
     "#mu006_1\n",
     "url = 'https://100api.orai.dev/mu006_1'\n",
-    "files = {\n",
+    "data = {\n",
     "    'temperature': 1,\n",
     "    'length': 200,\n",
     "    'mp3_output': True,\n",
@@ -2253,7 +2253,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, files=files, headers=headers)\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
