--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2211,14 +2211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'temperature': 1, 'length': 200, 'mp3_output': True}\n"
+      "{'temperature': 1, 'length': 200, 'mp3_output': 'true'}\n"
      ]
     },
     {
@@ -2263,7 +2263,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#mu006_2\n",
+    "url = 'https://100api.orai.dev/mu006_2'\n",
+    "data = {\n",
+    "    'temperature': 1,\n",
+    "    'length': 200,\n",
+    "    'mp3_output': 'true',\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
