--- a/main.ipynb
+++ b/main.ipynb
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Name': 'tranh.jpeg',\n",
-       " 'Hash': 'QmPoAqLmHcf7AAgrWwym2NseKdqUSLBKRmtgjaCMkdqBxh',\n",
-       " 'Size': '224539'}"
+       "{'Name': 'sudo.png',\n",
+       " 'Hash': 'QmVwFK9qYnu5NaELS7UUqopPJWhwyaPox232ptLn8FvwmX',\n",
+       " 'Size': '39087'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://128.199.70.52:5001/api/v0/add'\n",
-    "files = {'file': open('./tranh.jpeg','rb')}\n",
+    "files = {'file': open('./sudo.png','rb')}\n",
     "response = requests.post(url, files=files)\n",
     "response.json()"
    ]
