--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
