--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2334,7 +2334,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nl002\n",
+    "url = 'https://100api.orai.dev/mu006_2'\n",
+    "data = {\n",
+    "    'temperature': 1,\n",
+    "    'length': 200,\n",
+    "    'mp3_output': 'true',\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, data=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   }
  ],
  "metadata": {
