--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2336,7 +2336,7 @@
    "outputs": [],
    "source": [
     "#nl002\n",
-    "url = 'https://100api.orai.dev/mu006_2'\n",
+    "url = 'https://100api.orai.dev/nl002'\n",
     "data = {\n",
     "    'temperature': 1,\n",
     "    'length': 200,\n",
