--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2360,9 +2360,8 @@
     "#nl002\n",
     "url = 'https://100api.orai.dev/nl033_2'\n",
     "data = {\n",
-    "    'temperature': 1,\n",
-    "    'length': 200,\n",
-    "    'mp3_output': 'true',\n",
+    "  \"input\": \"i am a good boy\",\n",
+    "  \"number_word\": 10\n",
     "}\n",
     "  \n",
     "headers = {\n",
