--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2353,9 +2353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': 'i am a good boy', 'number_word': 10}\n",
+      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+     ]
+    }
+   ],
    "source": [
     "#nl002\n",
     "url = 'https://100api.orai.dev/nl033_2'\n",
@@ -2367,7 +2376,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, paras=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
