--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2324,7 +2324,7 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
@@ -2346,14 +2346,14 @@
     "headers = {\n",
     "        'Authorization': 'ai_market'\n",
     "    }\n",
-    "response = requests.post(url, data=data, headers=headers)\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
     "print(data)\n",
     "print(response.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2361,7 @@
      "output_type": "stream",
      "text": [
       "{'input': 'i am a good boy', 'number_word': 10}\n",
-      "{'data': '400 Bad Request: The browser (or proxy) sent a request that this server could not understand.', 'status': 'error'}\n"
+      "{'data': ['i am a good boy', 'so much in the bed', 'at home gleaming music to', 'neck to stare to neck', 'days so i has emotions'], 'status': 'success'}\n"
      ]
     }
    ],
