--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2338,9 +2338,7 @@
     "#nl002\n",
     "url = 'https://100api.orai.dev/nl002'\n",
     "data = {\n",
-    "    'temperature': 1,\n",
-    "    'length': 200,\n",
-    "    'mp3_output': 'true',\n",
+    "  \"paragraph\": \"my name is chain\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
