--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2394,7 +2394,8 @@
     "#nl005\n",
     "url = 'https://100api.orai.dev/nl002'\n",
     "data = {\n",
-    "  \"paragraph\": \"my name is chain\"\n",
+    "  \"sent1\": \"my name is orai\",\n",
+    "  \"sent2\": \"This is my city\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
