--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2429,7 +2429,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#nl006\n",
+    "url = 'https://100api.orai.dev/nl005'\n",
+    "data = {\n",
+    "  \"sent1\": \"my name is orai\",\n",
+    "  \"sent2\": \"This is my city\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
   },
   {
    "cell_type": "code",
