--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2433,8 +2433,8 @@
     "#nl006\n",
     "url = 'https://100api.orai.dev/nl006'\n",
     "data = {\n",
-    "  \"sent1\": \"my name is orai\",\n",
-    "  \"sent2\": \"This is my city\"\n",
+    "  \"sent1\": \"Tôi là học sinh\",\n",
+    "  \"sent2\": \"Tôi là giáo viên\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
