--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2481,8 +2481,7 @@
     "#nl008\n",
     "url = 'https://100api.orai.dev/nl008'\n",
     "data = {\n",
-    "  \"sent1\": \"Tôi là học sinh\",\n",
-    "  \"sent2\": \"Tôi là giáo viên\"\n",
+    "  \"input\": \"hello my name is\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
