--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2521,11 +2521,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#nl009\n",
+    "url = 'https://100api.orai.dev/nl009'\n",
+    "data = {\n",
+    "  \"sentence\": \"we are human\"\n",
+    "}\n",
+    "  \n",
+    "headers = {\n",
+    "        'Authorization': 'ai_market'\n",
+    "    }\n",
+    "response = requests.post(url, json=data, headers=headers)\n",
+    "print(data)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nl010\n",
     "url = 'https://100api.orai.dev/nl009'\n",
     "data = {\n",
     "  \"sentence\": \"we are human\"\n",
