--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2575,7 +2575,7 @@
     "#nl010\n",
     "url = 'https://100api.orai.dev/nl010'\n",
     "data = {\n",
-    "  \"sentence\": \"we are human\"\n",
+    "  \"sentence\": \"my name is orai\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
