--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2622,7 +2622,7 @@
     "#nl011\n",
     "url = 'https://100api.orai.dev/nl011'\n",
     "data = {\n",
-    "  \"sentence\": \"my name is orai\"\n",
+    "  \"sentence\": \"Tôi là học sinh\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
