--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2669,7 +2669,7 @@
     "#nl013\n",
     "url = 'https://100api.orai.dev/nl013'\n",
     "data = {\n",
-    "  \"sentence\": \"Tôi là học sinh\"\n",
+    "  \"text\": \"my name is orai\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
