--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2763,7 +2763,7 @@
     "#nl016\n",
     "url = 'https://100api.orai.dev/nl016'\n",
     "data = {\n",
-    "  \"text\": \"my name is orai\"\n",
+    "  \"text\": \"Donald Trump sent his own plane to transport 200 stranded marines\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
