--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2858,7 +2858,7 @@
     "#nl020\n",
     "url = 'https://100api.orai.dev/nl020'\n",
     "data = {\n",
-    "  \"text\": \"Donald Trump sent his own plane to transport 200 stranded marines\"\n",
+    "  \"sentence\": \"This question seems simple\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
