--- a/100API.ipynb
+++ b/100API.ipynb
@@ -2905,7 +2905,8 @@
     "#nl021\n",
     "url = 'https://100api.orai.dev/nl021'\n",
     "data = {\n",
-    "  \"sentence\": \"This question seems simple\"\n",
+    "  \"paragraph\": \"This question seems simple, so many people fail to prepare for it, but it’s crucial. Here's the deal: Don’t give your complete employment (or personal) history. Instead, give a pitch—one that’s concise and compelling and that shows exactly why you’re the right fit for the job. Muse writer and MIT career counselor Lily Zhang recommends using a present, past, future formula. Talk a little bit about your current role (including the scope and perhaps one big accomplishment), then give some background as to how you got there and experience you\",\n",
+    "  \"question\": \"how you got there and experience you\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
