--- a/100API.ipynb
+++ b/100API.ipynb
@@ -3000,7 +3000,7 @@
     "#nl024\n",
     "url = 'https://100api.orai.dev/nl024'\n",
     "data = {\n",
-    "  \"input_text\": \"we are human\"\n",
+    "  \"text\": \"my name is orai\"\n",
     "}\n",
     "  \n",
     "headers = {\n",
